binrw/tests/ui/invalid_keyword_with_imports.stderr
error: expected one of: `stream`, `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `repr`, `map_stream`, `magic`, `import`, `import_raw`, `assert`, `pre_assert`, `bound`
 --> tests/ui/invalid_keyword_with_imports.rs:5:6
  |
5 | #[br(invalid_struct_keyword)]
  |      ^^^^^^^^^^^^^^^^^^^^^^
